Fix mobile home horizontal scroll

--- a/assets/styles/page.scss
+++ b/assets/styles/page.scss
@@ -68,6 +68,7 @@
     position: relative;
     text-align: center;
     margin-bottom: 90px;
+    max-width: 90%;
   
     .back {
       padding: 30px;
